--- a/tableau-php.css
+++ b/tableau-php.css
@@ -2,7 +2,7 @@
   width: 100%;
 }
 th,tr,td {
-  border-style:dashed double;
+  border-style: solid;
   border-width: 1px;
   border-color: grey;
   text-align: center;
